# kell

./: .devcontainer.json  .gitignore  README.md  flake.nix  hs.cabal  justfile  kell.cabal
.github/workflows/: flake-update.yml  update-flake-lock.yaml
app/: Main.hs
devenv/haskell/: default.nix
devenv/nix/: default.nix
src/: Lib.hs  Main.hs
