cabal-version:      2.4
name:               hs
version:            0.1.0.0
license:            GPL-3.0-or-later
copyright:          2024 anntnzrb
maintainer:         anntnzrb@proton.me
author:             anntnzrb
homepage:           https://github.com/anntnzrb/hs
synopsis:           A template for Haskell projects using Nix
extra-source-files:
  COPYING
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings

  build-depends:
    , base    >=4.13.0.0 && <4.18.0.0.0
    , relude  >=1.0

  hs-source-dirs:     src
  default-language:   Haskell2010

executable hs
  import:  shared
  main-is: Main.hs
